--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="./style.css" />
+        <title>What Do You Know Week 4?</title>
+        
+    </head> 
+
+    <header>
+        <h1>Good Luck!</h1>
+    </header>
+
+    <body>
+        <!Create Timer>
+        <div class="timer"> Time: <span id="time">0</span></div>
+        <!Create High scores button>
+        <div class="highscores">View Highscores:
+            <button id="highscores">BestScores</button>
+        </div>
+        <!begining welcome page>
+        <div class="firstpage">
+            <h1 class="begin"> Welcome to Coding Quiz</h1>
+        </div>
+            <!start button>
+            <div class= "quiz">
+            <button id="begin"> Begin Quiz </button>
+          </div>
+
+        <!questions and answers>
+        <div class="QueAns" id="question" >
+            <h2 id="questions"></h2>
+            <div id="answers" class="answers"></div>
+          </div>
+      
+        <script> src="./script.js"</script>
+    </body>
+</html>
 
