--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>What Do You Know Week 4?</title>
         
     </head> 
@@ -38,4 +38,5 @@
         <script> src="./script.js"</script>
     </body>
 </html>
+
 
